--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,20 +66,28 @@ body {
 #auth-links {
   margin: 2px 15px;
 }
-#auth-links a {
+.auth-btn {
   color: #f2f2f2;
   text-decoration: none;
   border: 2px solid #f2f2f2;
+  background-color: transparent;
   border-radius: 8px;
   font-size: 18px;
   font-weight: bold;
   margin: 0 5px;
   padding: 3px 10px;
+  cursor: pointer;
   transition: all 150ms ease-in-out;
 }
-#auth-links a:hover {
+.auth-btn:hover {
   background-color: #f2f2f2;
   color: #191919;
+}
+#greeting-text {
+  color: #f2f2f2;
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 8px;
 }
 
 /* Login/Signup */
@@ -149,14 +157,146 @@ body {
 #home {
   position: relative;
   height: 100vh;
-  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 #home-title {
   text-transform: capitalize;
+  color: white;
   text-align: center;
   font-size: 60px;
-  margin-top: 18rem;
+  margin-top: 13rem;
+}
+#ticket-link {
+  color: #f2f2f2;
+  text-decoration: none;
+  border: 2px solid #f2f2f2;
+  background-color: transparent;
+  border-radius: 8px;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 15px 5px;
+  padding: 5px 35px;
+  cursor: pointer;
+  transition: all 150ms ease-in-out;
+}
+#ticket-link:hover {
+  background-color: #f2f2f2;
+  color: #191919;
+}
+
+/* Admin Dashboard */
+#admin-dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#dashboard-title {
+  font-size: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+}
+#select-container {
+  border-bottom: 3px solid #dadada;
+  padding-bottom: 2rem;
+}
+#select-container label {
+  font-size: 1.2rem;
+}
+#dropdown-select {
+  font-size: 1.1rem;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+/* Add Form */
+.add-form-container {
+  background-color: white;
+  width: 25rem;
+  margin: 2rem auto;
+  border-radius: 10px;
+  box-shadow: 0 20px 25px -10px rgb(0 0 0 / 0.1),
+    0 8px 10px -10px rgb(0 0 0 / 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.add-form-title {
+  font-size: 30px;
+  margin: 2rem 0;
+}
+.add-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.add-form input {
+  width: 21rem;
+  margin-bottom: 1rem;
+  font-size: 18px;
+  padding: 9px 5px;
+  border-radius: 10px;
+  outline: none;
+  border: 2px solid #dadada;
+}
+.add-form button {
+  width: 21rem;
+  margin: 1rem 0;
+  margin-bottom: 2rem;
+  font-size: 18px;
+  font-weight: bolder;
+  padding: 9px 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #2d4263;
+  color: white;
+  border: 3px solid #2d4263;
+  transition: all 150ms ease-in-out;
+}
+.add-form button:hover {
+  color: #2d4263;
+  background-color: transparent;
+}
+
+/* Running Movie Section */
+#running-movies {
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-title {
+  font-size: 2rem;
+}
+#movies-container {
+  width: fit-content;
+  margin: 1.5rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.movie-card {
+  width: 250px;
+  margin: 1.2rem 0.8rem;
+  background-color: white;
+  border-radius: 10px;
+  padding: 2px 10px;
+}
+.movie-img {
+  width: 200px;
+  height: 300px;
+  display: block;
+  margin: 5px auto;
+}
+.movie-title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin: 5px 0;
+}
+.movie-stars {
+  font-size: 1rem;
+  color: #484848;
+  margin-bottom: 5px;
 }
