--- a/client/src/index.css
+++ b/client/src/index.css
@@ -188,6 +188,7 @@ body {
 
 /* Admin Dashboard */
 #admin-dashboard {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -259,6 +260,15 @@ body {
   color: #2d4263;
   background-color: transparent;
 }
+#movie-select {
+  width: 21rem;
+  font-size: 18px;
+  padding: 9px 5px;
+  border-radius: 10px;
+  outline: none;
+  border: 2px solid #dadada;
+  background-color: transparent;
+}
 
 /* Running Movie Section */
 #running-movies {
@@ -283,6 +293,8 @@ body {
   background-color: white;
   border-radius: 10px;
   padding: 2px 10px;
+  box-shadow: 0 20px 25px -10px rgb(0 0 0 / 0.1),
+    0 8px 10px -10px rgb(0 0 0 / 0.1);
 }
 .movie-img {
   width: 200px;
@@ -299,4 +311,122 @@ body {
   font-size: 1rem;
   color: #484848;
   margin-bottom: 5px;
+}
+
+/* Alert */
+#alert {
+  width: 100vw;
+  font-size: 1.4rem;
+  padding: 0.5rem 1rem;
+  position: fixed;
+  top: 4.5rem;
+  left: 0px;
+  z-index: 20;
+}
+.alert-success {
+  color: #0f5132;
+  background-color: #d1e7dd;
+}
+.alert-danger {
+  color: #842029;
+  background-color: #f8d7da;
+}
+.alert-warning {
+  color: #664d03;
+  background-color: #fff3cd;
+}
+
+/* Footer */
+#footer {
+  background-color: #191919;
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#copyright {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin: 10px 0px;
+}
+#footer a {
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+/* Booking Dashboard */
+#booking-dashboard {
+  margin-top: 4rem;
+}
+#booking-title {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+#show-table {
+  border-collapse: collapse;
+  width: 90%;
+  margin: 0 auto;
+}
+#show-table td,
+#show-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+#show-table tr:hover {
+  background-color: #ddd;
+}
+#show-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #2d4263;
+  color: white;
+}
+.book-btn {
+  border: 2px solid #c84b31;
+  text-decoration: none;
+  color: #c84b31;
+  font-weight: bold;
+  padding: 2px 10px;
+  border-radius: 10px;
+  transition: all 150ms ease-in-out;
+}
+.book-btn:hover {
+  background-color: #c84b31;
+  color: #f2f2f2;
+}
+
+/* Ticket Dashboard */
+#ticket-dashboard {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#ticket-dashboard h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+#show-details {
+  background-color: white;
+  width: 25rem;
+  font-size: 1.2rem;
+  padding: 1.5rem 2rem;
+  border-radius: 10px;
+  box-shadow: 0 20px 25px -10px rgb(0 0 0 / 0.1),
+    0 8px 10px -10px rgb(0 0 0 / 0.1);
+  display: flex;
+  flex-direction: column;
+}
+#show-details div {
+  font-weight: bold;
+  color: #2d4263;
+  margin: 10px 0;
+}
+#show-details span {
+  font-weight: normal;
+  color: #191919;
 }
