--- a/client/src/index.css
+++ b/client/src/index.css
@@ -412,7 +412,7 @@ body {
 }
 #show-details {
   background-color: white;
-  width: 25rem;
+  width: 30rem;
   font-size: 1.2rem;
   padding: 1.5rem 2rem;
   border-radius: 10px;
@@ -429,4 +429,15 @@ body {
 #show-details span {
   font-weight: normal;
   color: #191919;
+}
+#pay-btn {
+  font-size: 1.2rem;
+  font-weight: bold;
+  background-color: #2d4263;
+  border: 2px solid #dadada;
+  border-radius: 10px;
+  color: #dadada;
+  margin: 1rem 0;
+  padding: 0.5rem;
+  cursor: pointer;
 }
