--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,16 +52,11 @@ body {
   height: 50px;
   margin-right: 5px;
 }
-#nav-menu {
-  display: none;
-}
-#nav-links {
-  display: flex;
-  list-style: none;
-}
-.nav-link a {
+#nav-link {
   color: #f2f2f2;
-  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0 8px;
 }
 #auth-links {
   margin: 2px 15px;
@@ -184,6 +179,35 @@ body {
 #ticket-link:hover {
   background-color: #f2f2f2;
   color: #191919;
+}
+
+/* Loader */
+.dots-1 {
+  width: 32px;
+  height: 32px;
+  --c: radial-gradient(
+    circle closest-side,
+    currentColor 90%,
+    rgba(25, 25, 25, 0)
+  );
+  background: var(--c) 0 0, var(--c) 0 100%, var(--c) 100% 100%;
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  animation: d1 1s infinite linear;
+}
+@keyframes d1 {
+  25% {
+    background-position: 100% 0, 0 100%, 100% 100%;
+  }
+  50% {
+    background-position: 100% 0, 0 0, 100% 100%;
+  }
+  75% {
+    background-position: 100% 0, 0 0, 0 100%;
+  }
+  100% {
+    background-position: 100% 100%, 0 0, 0 100%;
+  }
 }
 
 /* Admin Dashboard */
@@ -396,6 +420,12 @@ body {
 .book-btn:hover {
   background-color: #c84b31;
   color: #f2f2f2;
+}
+.disabled-link {
+  pointer-events: none;
+  border-color: gray;
+  color: gray;
+  background-color: #dadada;
 }
 
 /* Ticket Dashboard */
