--- a/client/src/index.css
+++ b/client/src/index.css
@@ -471,3 +471,16 @@ body {
   padding: 0.5rem;
   cursor: pointer;
 }
+
+/* Ticket Display */
+#ticket-display {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#ticket-display h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
